<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kalkulator BMI</string>
    <string name="logo">Twój kalkulator BMI</string>
    <string name="loadingText">Ładowanie...</string>
    <string name="hello_text">Witaj w aplikacji</string>
    <string name="hello_desc">Wprowadź wymagane dane i poznaj swoje BMI</string>
    <string name="height_hint">Podaj swój wzrost (cm)</string>
    <string name="weight_hint">Podaj masę ciała (kg)</string>
    <string name="button_calculate_text">Oblicz wskaźnik BMI</string>
    <string name="toast_alert">Proszę podać wartość w polu</string>
    <string name="toast_select_alert">Proszę wybrać płeć</string>
    <string name="age_hint">Podaj swój wiek</string>
    <string name="RadioMaleText">Mężczyzna</string>
    <string name="RadioFemaleText">Kobieta</string>
    <string name="goBackButton">Oblicz ponownie</string>
    <string name="result_textBMI">Twoje BMI wynosi...</string>
    <string name="age_alert_toast">Podany wiek nie jest poprawny!</string>
    <string name="dot_alert_toast">Nieprawidłowy format wpisanej liczby!</string>
    <string name="questTitle">Wyjście</string>
    <string name="questMsg">Czy napewno chcesz opuścić aplikację?</string>
    <string name="exitYes">Tak</string>
    <string name="exitNo">Nie</string>

    <string name="underweight">Niedowaga</string>
    <string name="normal_weight">Waga prawidłowa</string>
    <string name="overweight">Nadwaga</string>
    <string name="adiposity">Otyłość</string>
    <string name="severe_adiposity">Skrajna otyłość</string>
    <string name="emaciation">Wychudzenie</string>
    <string name="starvation">Wygłodzenie</string>
    <string name="inanition">Wyniszczenie</string>

    <string name="underweight_desc">Ważysz za mało! Niedobór masy ciała zwiększa ryzyko występowania alergii oraz obniża odporność organizmu.
    Porozmawiaj z lekarzem o tym, w jaki sposób możesz zwiększyć swoją masę ciała.</string>

    <string name="normal_weight_desc">Możesz być naprawdę zadowolony, jeśli Twoja waga mieści się w tym przedziale indeksu BMI. Gratulacje!</string>
    <string name="normal_weight_desc_woman">Możesz być naprawdę zadowolona, jeśli Twoja waga mieści się w tym przedziale indeksu BMI. Gratulacje!</string>

    <string name="overweight_desc">Masz nadwagę! Już niewielka nadwaga zwiększa ryzyko zachorowania na nowotwory, choroby układu
        krążenia i cukrzycę typu 2. Porozmawiaj z lekarzem o tym, w jaki sposób możesz zmiejszyć swoją masę ciała.</string>

    <string name="adiposity_desc">Ważysz za dużo! Otyłość zwiększa ryzyko chorób sercowo-naczyniowych, ze względu na odkładanie się
    nadmiaru tłuszczu w naczyniach krwionośnych, co może prowadzić co zawału serca, udaru mózgu, itp. Nie lekceważ tego stanu!</string>

    <string name="severe_adiposity_desc">Ważysz zdecydowanie za dużo! Pomyśl o zmianie nawyków żywieniowych, a także o leczeniu
    pod okiem odpowiedniego specjalisty. Pamiętaj, że wraz z utratą nadmiarowych kilogramów odzyskujesz zdrowie!</string>

    <string name="emaciation_desc">Poważna niedowaga może osłabiać twój układ odpornościowy, a także zwiększać ryzyko wystąpienia osteoporozy i innych groźnych chorób.</string>
    <string name="stravation_desc">Ważysz zdecydowanie za mało! Wygłodzenie to znaczna utrata tkanki mięśniowej i tłuszczowej, stanowiąca zagrożenie dla zdrowia i życia.</string>
    <string name="inaniation_desc">Ważysz zdecydowanie za mało! Wyniszczenie organizmu (kacheksja) charakteryzuje znaczny spadek masy ciała który związany jest
        z zanikiem tkanki podskórnej i utratą masy mięśniowej. Koniecznie porozmawiaj z lekarzem!</string>
</resources>